[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Assets/Themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Themes/ButtonPressed.tres" type="Theme" id=4]
[ext_resource path="res://Assets/Buttons/reload.png" type="Texture" id=5]
[ext_resource path="res://Assets/Buttons/Tiles.png" type="Texture" id=6]
[ext_resource path="res://Scenes/TilePanel.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/HomePanel.tscn" type="PackedScene" id=9]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftPanel" type="PanelContainer" parent="Panel/HBoxContainer"]
margin_right = 74.0
margin_bottom = 600.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/HBoxContainer/LeftPanel"]
margin_left = 2.0
margin_top = 2.0
margin_right = 72.0
margin_bottom = 598.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer/LeftPanel/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 60.0
margin_bottom = 586.0
theme = ExtResource( 4 )
custom_constants/separation = 8

[node name="HomeButton" parent="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
hint_tooltip = "Load Texture"
toggle_mode = true
action_mode = 0

[node name="TileButton" parent="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
margin_top = 58.0
margin_bottom = 108.0
hint_tooltip = "Load Texture"
toggle_mode = true
action_mode = 0

[node name="TextureRect" parent="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/TileButton" index="0"]
texture = ExtResource( 6 )

[node name="Label" type="Label" parent="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer"]
margin_top = 116.0
margin_right = 50.0
margin_bottom = 518.0
size_flags_vertical = 3

[node name="Button" parent="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer" instance=ExtResource( 3 )]
visible = false
margin_top = 468.0
margin_bottom = 518.0
hint_tooltip = "Load Texture"

[node name="TextureRect" parent="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/Button" index="0"]
texture = ExtResource( 5 )

[node name="Button2" type="Button" parent="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer"]
margin_top = 526.0
margin_right = 50.0
margin_bottom = 576.0
rect_min_size = Vector2( 50, 50 )
size_flags_horizontal = 3
theme = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -2.0
margin_bottom = -2.0
rect_min_size = Vector2( 50, 50 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 78.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3

[node name="HomePanel" parent="Panel/HBoxContainer/VBoxContainer" instance=ExtResource( 9 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 946.0
margin_bottom = 600.0

[node name="TilePanel" parent="Panel/HBoxContainer/VBoxContainer" instance=ExtResource( 8 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 302.0
margin_right = 946.0
margin_bottom = 600.0

[connection signal="pressed" from="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/HomeButton" to="." method="_on_HomeButton_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/TileButton" to="." method="_on_TileButton_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/Button2" to="." method="_on_Button2_pressed"]

[editable path="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/HomeButton"]
[editable path="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/TileButton"]
[editable path="Panel/HBoxContainer/LeftPanel/MarginContainer/VBoxContainer/Button"]
